--- a/23people/src/main/resources/application.properties
+++ b/23people/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/people23
-spring.datasource.username=people23
+#spring.datasource.url=jdbc:mysql://localhost:3306/people23
+spring.datasource.url=jdbc:mysql://people23.cluster-cmwdi5ztl57p.us-east-1.rds.amazonaws.com:3306/people23
+spring.datasource.username=admin
 spring.datasource.password=people23
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
